--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ html2text==2014.4.5
 ipdb==0.8
 ipython==2.1.0
 nose==1.3.3
+blessings==1.5.1
+nose-progressive==1.5.1
+python-termstyle==0.1.10
+rednose==0.4.1
