--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,12 @@
 [nosetests]
 detailed-errors=1
 with-coverage=1
-cover-package=painter
+cover-package=xamcheck.utils
 cover-erase=1
-verbosity=2
+verbosity=3
 with-doctest=1
+doctest-tests=1
+with-progressive=1
+rednose=1
+force-color=1
+#cover-min-percentage=96
