--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [nosetests]
 detailed-errors=1
 with-coverage=1
-cover-package=xamcheck.utils
+cover-package=xamcheck_utils
 cover-erase=1
 verbosity=3
 with-doctest=1
