--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ local.properties
 # PDT-specific
 .buildpath
 
-# sbteclipse plugin 
+# sbteclipse plugin
 .target
 
 # TeXlipse plugin
@@ -78,7 +78,8 @@ tramp
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -161,3 +162,4 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
+*.sublime-workspace
