--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,1 @@
-Django==1.7.1
-argparse==1.2.1
-blessings==1.6
-coverage==3.7.1
-html2text==2014.12.24
-ipdb==0.8
-ipython==2.3.1
-nose==1.3.4
-nose-progressive==1.5.1
-python-termstyle==0.1.10
-rednose==0.4.1
-wsgiref==0.1.2
-xlrd==0.9.3
+-r pip-requirements/base.txt
